--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-treebeard": "^1.1.4"
   },
   "devDependencies": {
     "react-scripts": "1.0.8"
