--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
-    "react-treebeard": "^1.1.4"
+    "react-redux": "^5.0.5",
+    "react-treebeard": "^1.1.4",
+    "redux": "^3.7.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.8"
